owl-parser/src/parser/snapshots/owl_parser__parser__stmt__tests__fn-declaration-with-params-and-body.snap
---
source: owl-parser/src/parser/stmt.rs
expression: "stmt(\"fn foo(a, b, c) { a + b + c; }\")"

---
Stmt {
    kind: FnDeclaration {
        ident: "foo",
        params: [
            Stmt {
                kind: FnParam {
                    ident: "a",
                },
                span: 7..8,
            },
            Stmt {
                kind: FnParam {
                    ident: "b",
                },
                span: 10..11,
            },
            Stmt {
                kind: FnParam {
                    ident: "c",
                },
                span: 13..14,
            },
        ],
        body: [
            Stmt {
                kind: ExprStmt(
                    Expr {
                        kind: Binary {
                            lhs: Expr {
                                kind: Binary {
                                    lhs: Expr {
                                        kind: Identifier(
                                            "a",
                                        ),
                                        span: 18..19,
                                    },
                                    op: Plus,
                                    rhs: Expr {
                                        kind: Identifier(
                                            "b",
                                        ),
                                        span: 22..23,
                                    },
                                },
                                span: 18..23,
                            },
                            op: Plus,
                            rhs: Expr {
                                kind: Identifier(
                                    "c",
                                ),
                                span: 26..27,
                            },
                        },
                        span: 18..27,
                    },
                ),
                span: 18..28,
            },
        ],
    },
    span: 0..30,
}
