owl-parser/src/parser/snapshots/owl_parser__parser__stmt__tests__let-declaration.snap
---
source: owl-parser/src/parser/stmt.rs
expression: "stmt(\"let x = 2;\")"

---
Stmt {
    kind: LetDeclaration {
        ident: "x",
        initializer: Expr {
            kind: NumberLit(
                2.0,
            ),
            span: 8..9,
        },
        ty: None,
    },
    span: 0..10,
}
