owl-parser/src/parser/snapshots/owl_parser__parser__stmt__tests__return-stmt-with-expr.snap
---
source: owl-parser/src/parser/stmt.rs
expression: "stmt(\"return 1 + 2;\")"

---
Stmt {
    kind: ReturnStmt(
        Expr {
            kind: Binary {
                lhs: Expr {
                    kind: NumberLit(
                        1.0,
                    ),
                    span: 7..8,
                },
                op: Plus,
                rhs: Expr {
                    kind: NumberLit(
                        2.0,
                    ),
                    span: 11..12,
                },
            },
            span: 7..12,
        },
    ),
    span: 0..13,
}
