owl-parser/src/parser/snapshots/owl_parser__parser__stmt__tests__return-stmt.snap
---
source: owl-parser/src/parser/stmt.rs
expression: "stmt(\"return 1;\")"

---
Stmt {
    kind: ReturnStmt(
        Expr {
            kind: NumberLit(
                1.0,
            ),
            span: 7..8,
        },
    ),
    span: 0..9,
}
